src/snapshots/venial__tests__parse_normal_struct_generic_params.snap
---
source: src/tests.rs
assertion_line: 346
expression: struct_type
---
Struct(
    Struct {
        name: "Hello",
        fields: Named(
            [
                NamedField {
                    name: "a",
                    ty: [
                        "A",
                    ],
                },
                NamedField {
                    name: "b",
                    ty: [
                        "B",
                        "<",
                        "X",
                        ",",
                        "Y",
                        ",",
                        "Z",
                        ">",
                    ],
                },
            ],
        ),
    },
)
